WIP: Build and package Mandrel with native native-image